exports[`Page when is fetching renders the loading spinner 1`] = `
<div
  className="container">
  <div
    className="row">
    <h3>
      London School of Barbering availability
    </h3>
  </div>
  <div
    className="row">
    <inject-LocationHeader-with-store
      dates={null}
      locationId={4}
      onSelectedLocationChange={[Function]}
      onSelectedServiceChange={[Function]}
      serviceId={68} />
  </div>
  <div
    className="row">
    <Loading />
  </div>
</div>
`;

exports[`Page when there is a fetch error renders the error 1`] = `
<div
  className="container">
  <div
    className="row">
    <h3>
      London School of Barbering availability
    </h3>
  </div>
  <div
    className="row">
    <div>
      Fetch error
    </div>
  </div>
</div>
`;

exports[`Page when there is availability renders the data 1`] = `
<div
  className="container">
  <div
    className="row">
    <h3>
      London School of Barbering availability
    </h3>
  </div>
  <div
    className="row">
    <inject-LocationHeader-with-store
      dates={
        Object {
          "end": "date",
          "start": "date",
        }
      }
      locationId={4}
      onSelectedLocationChange={[Function]}
      onSelectedServiceChange={[Function]}
      serviceId={68} />
  </div>
  <div
    className="row">
    <AvailabilityList
      availability={
        Array [
          Object {
            "date": "date",
            "times": Array [
              1,
              2,
            ],
          },
        ]
      } />
  </div>
</div>
`;
